--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,10 +25,16 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: npm run electron:build
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
 
+      - name: Install npm
+        run: |
+          npm install
+          
+      - name: Build
+        run: npm start electron:build
+        
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
