--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,9 @@ jobs:
           npm install
           
       - name: Build
-        run: npm start electron:build
+        run: |
+          export GH_TOKEN="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"
+          npm start electron:build
         
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
