--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,8 @@ jobs:
           
       - name: Build
         run: npm start electron:build
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
         
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
