--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,10 +33,10 @@ jobs:
           npm install
           
       - name: Build
-        run: npm start electron:build
+        run: npm run electron:build
         env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
-        
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}    
+      
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
