--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,8 @@ jobs:
       - name: Build
         run: npm run electron:build
         env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}    
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}   
+          GITHUB_TOKEN: ${{secrets.GH_TOKEN }}
       
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
