--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "angular-electron",
-  "version": "9.0.3",
-  "description": "Angular 11 with Electron (Typescript + SASS + Hot Reload)",
-  "homepage": "https://github.com/maximegris/angular-electron",
+  "version": "0.2",
+  "description": "SF Demos launcher for SEs",
   "author": {
     "name": "Maxime GRIS",
     "email": "maxime.gris@gmail.com"
