--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,7 @@ jobs:
         run: echo ${{ secrets.GH_TOKEN }}
         
       - name: Build
-        run: npm run electron:build
+        run: npm run electron:release
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}   
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
