--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,8 +27,19 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+    
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          draft: true
+          prerelease: false
 
-      - name: Use Node.jj
+      - name: Use Node.js
         uses: actions/setup-node@v1
         with:
           node-version: '14'
@@ -38,17 +49,9 @@ jobs:
         run: |
           npm install
           
-      - name: Echo
-        run: echo ${{ secrets.GH_TOKEN }}
-        
       - name: Build
         run: npm run electron:release
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}   
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
       
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
