--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,3 +55,9 @@ jobs:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}   
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
       
+      - name: Publish release
+        uses: eregon/publish-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+        with:
+          release_id: ${{ steps.create_release.outputs.id }}
