--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "angular-electron",
-  "version": "0.3.1",
+  "name": "demos-launcher",
+  "version": "0.3.2",
   "description": "SF Demos launcher for SEs",
   "author": {
     "name": "Maxime GRIS",
