--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.5.3",
   "description": "SF Demos launcher for SEs",
   "author": {
-    "name": "Maxime GRIS",
-    "email": "maxime.gris@gmail.com"
+    "name": "Davide Appiano",
+    "email": "dappiano@salesforce.com"
   },
   "keywords": [
     "angular",
