--- a/tsconfig.serve.json
+++ b/tsconfig.serve.json
@@ -17,7 +17,10 @@
     ]
   },
   "files": [
-    "main.ts"
+    "main.ts",
+    "src/os/OsFactory.ts",
+    "src/os/OsMechanics.ts",
+    "src/os/MacOsMechanics.ts"
   ],
   "exclude": [
     "node_modules",
