--- a/package.json
+++ b/package.json
@@ -50,32 +50,32 @@
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "10.0.1",
-    "@angular-devkit/build-angular": "0.1100.3",
+    "@angular-devkit/build-angular": "12.2.18",
     "@angular-eslint/builder": "0.8.0-beta.3",
     "@angular-eslint/eslint-plugin": "0.8.0-beta.3",
     "@angular-eslint/eslint-plugin-template": "0.8.0-beta.3",
     "@angular-eslint/schematics": "0.8.0-beta.3",
     "@angular-eslint/template-parser": "0.8.0-beta.3",
-    "@angular/animations": "12.0.0",
+    "@angular/animations": "12.2.16",
     "@angular/cdk": "11.0.3",
-    "@angular/cli": "11.0.3",
-    "@angular/common": "11.0.3",
-    "@angular/compiler": "11.0.3",
-    "@angular/compiler-cli": "11.0.3",
-    "@angular/core": "11.0.3",
-    "@angular/forms": "11.0.3",
-    "@angular/language-service": "11.0.3",
+    "@angular/cli": "12.2.18",
+    "@angular/common": "12.2.16",
+    "@angular/compiler": "12.2.16",
+    "@angular/compiler-cli": "12.2.16",
+    "@angular/core": "12.2.16",
+    "@angular/forms": "12.2.16",
+    "@angular/language-service": "12.2.16",
     "@angular/material": "11.0.3",
-    "@angular/platform-browser": "11.0.3",
-    "@angular/platform-browser-dynamic": "11.0.3",
-    "@angular/router": "11.0.3",
-    "@ngxs/devtools-plugin": "^3.3.2",
+    "@angular/platform-browser": "12.2.16",
+    "@angular/platform-browser-dynamic": "12.2.16",
+    "@angular/router": "12.2.16",
+    "@ngxs/devtools-plugin": "3.7.4",
     "@ngxs/logger-plugin": "3.7.2",
     "@ngxs/schematics": "^0.0.1-alpha.5",
-    "@ngxs/store": "^3.3.2",
+    "@ngxs/store": "3.7.4",
     "@types/jasmine": "3.6.2",
     "@types/jasminewd2": "2.0.8",
-    "@types/jsforce": "1.9.26",
+    "@types/jsforce": "1.9.43",
     "@types/lowdb": "1.0.9",
     "@types/mocha": "8.0.4",
     "@types/node": "12.12.6",
@@ -95,7 +95,7 @@
     "eslint-plugin-prefer-arrow": "1.2.2",
     "jasmine-core": "3.6.0",
     "jasmine-spec-reporter": "6.0.0",
-    "karma": "~5.1.0",
+    "karma": "~6.4.0",
     "karma-coverage-istanbul-reporter": "3.0.3",
     "karma-electron": "6.3.1",
     "karma-jasmine": "4.0.1",
@@ -106,10 +106,10 @@
     "spectron": "13.0.0",
     "ts-node": "9.1.0",
     "tslib": "2.0.3",
-    "typescript": "4.0.5",
+    "typescript": "4.3.5",
     "wait-on": "5.0.1",
     "webdriver-manager": "12.1.7",
-    "zone.js": "0.10.3"
+    "zone.js": "~0.11.4"
   },
   "engines": {
     "node": ">=10.13.0"
