--- a/package.json
+++ b/package.json
@@ -50,25 +50,25 @@
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "10.0.1",
-    "@angular-devkit/build-angular": "13.3.9",
-    "@angular-eslint/builder": "0.8.0-beta.3",
-    "@angular-eslint/eslint-plugin": "0.8.0-beta.3",
-    "@angular-eslint/eslint-plugin-template": "0.8.0-beta.3",
-    "@angular-eslint/schematics": "0.8.0-beta.3",
-    "@angular-eslint/template-parser": "0.8.0-beta.3",
-    "@angular/animations": "13.3.11",
+    "@angular-devkit/build-angular": "14.1.0",
+    "@angular-eslint/builder": "14.0.2",
+    "@angular-eslint/eslint-plugin": "14.0.2",
+    "@angular-eslint/eslint-plugin-template": "14.0.2",
+    "@angular-eslint/schematics": "14.0.2",
+    "@angular-eslint/template-parser": "14.0.2",
+    "@angular/animations": "14.1.0",
     "@angular/cdk": "13.3.9",
-    "@angular/cli": "13.3.9",
-    "@angular/common": "13.3.11",
-    "@angular/compiler": "13.3.11",
-    "@angular/compiler-cli": "13.3.11",
-    "@angular/core": "13.3.11",
-    "@angular/forms": "13.3.11",
-    "@angular/language-service": "13.3.11",
+    "@angular/cli": "14.1.0",
+    "@angular/common": "14.1.0",
+    "@angular/compiler": "14.1.0",
+    "@angular/compiler-cli": "14.1.0",
+    "@angular/core": "14.1.0",
+    "@angular/forms": "14.1.0",
+    "@angular/language-service": "14.1.0",
     "@angular/material": "13.3.9",
-    "@angular/platform-browser": "13.3.11",
-    "@angular/platform-browser-dynamic": "13.3.11",
-    "@angular/router": "13.3.11",
+    "@angular/platform-browser": "14.1.0",
+    "@angular/platform-browser-dynamic": "14.1.0",
+    "@angular/router": "14.1.0",
     "@ngxs/devtools-plugin": "3.7.4",
     "@ngxs/logger-plugin": "3.7.2",
     "@ngxs/schematics": "^0.0.1-alpha.5",
