--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "lint": "ng lint"
   },
   "dependencies": {
-    "axios": "0.19.2",
+    "axios": "0.27.2",
     "guid-typescript": "1.0.9",
     "jsforce": "1.10.1",
     "lowdb": "1.0.0",
@@ -57,7 +57,7 @@
     "@angular-eslint/schematics": "14.0.2",
     "@angular-eslint/template-parser": "14.0.2",
     "@angular/animations": "14.1.0",
-    "@angular/cdk": "14.1.0",
+    "@angular/cdk": "13.3.9",
     "@angular/cli": "14.1.0",
     "@angular/common": "14.1.0",
     "@angular/compiler": "14.1.0",
@@ -65,7 +65,7 @@
     "@angular/core": "14.1.0",
     "@angular/forms": "14.1.0",
     "@angular/language-service": "14.1.0",
-    "@angular/material": "14.1.0",
+    "@angular/material": "13.3.9",
     "@angular/platform-browser": "14.1.0",
     "@angular/platform-browser-dynamic": "14.1.0",
     "@angular/router": "14.1.0",
@@ -81,18 +81,18 @@
     "@types/node": "12.12.6",
     "@typescript-eslint/eslint-plugin": "4.7.0",
     "@typescript-eslint/eslint-plugin-tslint": "4.7.0",
-    "@typescript-eslint/parser": "4.7.0",
     "chai": "4.2.0",
     "conventional-changelog-cli": "2.1.1",
     "core-js": "3.6.5",
     "cross-env": "7.0.2",
-    "electron": "11.0.3",
-    "electron-builder": "22.9.1",
-    "electron-reload": "1.5.0",
-    "eslint": "7.13.0",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsdoc": "30.7.8",
-    "eslint-plugin-prefer-arrow": "1.2.2",
+    "electron": "19.0.8",
+    "electron-builder": "23.1.0",
+    "electron-debug": "3.2.0",
+    "electron-reloader": "1.2.3",
+    "eslint": "8.20.0",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jsdoc": "39.3.3",
+    "eslint-plugin-prefer-arrow": "1.2.3",
     "jasmine-core": "3.6.0",
     "jasmine-spec-reporter": "6.0.0",
     "karma": "~6.4.0",
@@ -104,9 +104,9 @@
     "npm-run-all": "4.1.5",
     "rxjs": "7.5.6",
     "spectron": "13.0.0",
-    "ts-node": "9.1.0",
-    "tslib": "2.0.3",
-    "typescript": "4.6.4",
+    "playwright": "1.23.4",
+    "ts-node": "10.9.1",
+    "typescript": "~4.7.4",
     "wait-on": "5.0.1",
     "webdriver-manager": "12.1.7",
     "zone.js": "~0.11.4"
