--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,15 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "resolveJsonModule": true,
-    "module": "es2020",
     "outDir": "./dist/out-tsc",
+    "module": "es2020",
     "sourceMap": true,
     "declaration": false,
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "target": "es2017",
+    "allowJs": true,
+    "target": "es2015",
     "typeRoots": [
       "node_modules/@types"
     ],
@@ -20,16 +20,6 @@
       "dom"
     ]
   },
-  "files": [
-    "src/main.ts",
-    "src/os/OsFactory.ts",
-    "src/os/OsMechanics.ts",
-    "src/os/MacOsMechanics.ts",
-    "src/polyfills.ts"
-  ],
-  "include": [
-    "src/**/*.d.ts"
-  ],
   "exclude": [
     "node_modules"
   ],
