--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "stream": "0.0.2"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "10.0.1",
+    "@angular-builders/custom-webpack": "14.0.0",
     "@angular-devkit/build-angular": "14.1.0",
     "@angular-eslint/builder": "14.0.2",
     "@angular-eslint/eslint-plugin": "14.0.2",
@@ -79,8 +79,9 @@
     "@types/lowdb": "1.0.9",
     "@types/mocha": "8.0.4",
     "@types/node": "12.12.6",
-    "@typescript-eslint/eslint-plugin": "4.7.0",
-    "@typescript-eslint/eslint-plugin-tslint": "4.7.0",
+    "@typescript-eslint/eslint-plugin": "5.30.7",
+    "@typescript-eslint/eslint-plugin-tslint": "5.30.7",
+    "@typescript-eslint/parser": "5.30.7",
     "chai": "4.2.0",
     "conventional-changelog-cli": "2.1.1",
     "core-js": "3.6.5",
@@ -88,7 +89,6 @@
     "electron": "19.0.8",
     "electron-builder": "23.1.0",
     "electron-debug": "3.2.0",
-    "electron-reloader": "1.2.3",
     "eslint": "8.20.0",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-jsdoc": "39.3.3",
@@ -101,10 +101,11 @@
     "karma-jasmine": "4.0.1",
     "karma-jasmine-html-reporter": "1.5.4",
     "mocha": "8.2.1",
+    "node-polyfill-webpack-plugin": "2.0.0",
     "npm-run-all": "4.1.5",
+    "playwright": "1.23.4",
     "rxjs": "7.5.6",
     "spectron": "13.0.0",
-    "playwright": "1.23.4",
     "ts-node": "10.9.1",
     "typescript": "~4.7.4",
     "wait-on": "5.0.1",
