--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "lint": "ng lint"
   },
   "dependencies": {
-    "axios": "0.27.2",
     "guid-typescript": "1.0.9",
     "jsforce": "1.10.1",
     "lowdb": "1.0.0",
@@ -71,7 +70,7 @@
     "@angular/router": "14.1.0",
     "@ngxs/devtools-plugin": "3.7.4",
     "@ngxs/logger-plugin": "3.7.2",
-    "@ngxs/schematics": "^0.0.1-alpha.5",
+    "@ngxs/schematics": "0.0.1-alpha.5",
     "@ngxs/store": "3.7.4",
     "@types/jasmine": "3.6.2",
     "@types/jasminewd2": "2.0.8",
@@ -108,7 +107,7 @@
     "spectron": "13.0.0",
     "ts-node": "10.9.1",
     "typescript": "~4.7.4",
-    "wait-on": "5.0.1",
+    "wait-on": "6.0.1",
     "webdriver-manager": "12.1.7",
     "zone.js": "~0.11.4"
   },
