--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
     "resolveJsonModule": true,
     "target": "es2020",
     "typeRoots": ["node_modules/@types"],
-    "lib": ["es2017", "es2016", "es2015", "dom"]
+    "lib": ["es2017", "es2016", "es2015", "dom"],
+    "allowSyntheticDefaultImports": true,
   },
   "exclude": ["node_modules"],
   "angularCompilerOptions": {
