Removed node dependency Refactor all local calls to pas through ipc

--- a/tsconfig.serve.json
+++ b/tsconfig.serve.json
@@ -18,6 +18,7 @@
   },
   "files": [
     "main.ts",
+    "preload.ts",
     "src/os/OsFactory.ts",
     "src/os/OsMechanics.ts",
     "src/os/MacOsMechanics.ts"
