--- a/.github/workflows/autotag.yml
+++ b/.github/workflows/autotag.yml
@@ -24,5 +24,5 @@ jobs:
     - uses: actions/checkout@v2
     - uses: Klemensas/action-autotag@stable
       with:
-        github-token: "${{ secrets.GH_TOKEN }}"
+        GITHUB_TOKEN: "${{ secrets.GH_TOKEN }}"
         tag_prefix: "v"
