--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "demos-launcher",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "description": "SF Demos launcher for SEs",
   "author": {
     "name": "Davide Appiano",
@@ -28,7 +28,7 @@
     "build": "npm run electron:serve-tsc && ng build --base-href ./",
     "build:dev": "npm run build -- -c dev",
     "build:prod": "npm run build -- -c production",
-    "ng:serve": "ng serve -c web -o",
+    "ng:serve": "ng serve -c production -o",
     "electron:serve-tsc": "tsc -p tsconfig.serve.json",
     "electron:serve": "wait-on tcp:4200 && npm run electron:serve-tsc && npx electron . --serve",
     "electron:local": "npm run build:prod && npx electron .",
