--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compileOnSave": false,
   "compilerOptions": {
     "outDir": "./dist/out-tsc",
-    "module": "es2020",
+    "module": "es2022",
     "sourceMap": true,
     "declaration": false,
     "moduleResolution": "node",
@@ -10,7 +10,7 @@
     "experimentalDecorators": true,
     "allowJs": true,
     "resolveJsonModule": true,
-    "target": "es2020",
+    "target": "ES2022",
     "typeRoots": ["node_modules/@types"],
     "lib": ["es2017", "es2016", "es2015", "dom"],
     "allowSyntheticDefaultImports": true,
