--- a/angular.json
+++ b/angular.json
@@ -73,7 +73,7 @@
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.web.ts"
+                  "with": "src/environments/environment.prod.ts"
                 }
               ]
             }
